# knn-highd-viz

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_VERIFICATION.md  README.md  TEST_SUITE_README.md  analyze_embedding.py  collect_metrics.py  details.md  generate_test_data.py  main.py  pyproject.toml  results_analyzer.py  test_suite.py  visualize.py
include/hknn/: api.hpp
include/hknn/cli/: args.hpp
include/hknn/embed/: gradients.hpp  hierarchy.hpp  optimizer.hpp  sampler.hpp  sharing.hpp
include/hknn/graph/: coarsen.hpp  csr_graph.hpp  knn_approximate.hpp  knn_bruteforce.hpp  nn_descent.hpp  pij.hpp  random_projection_tree.hpp
include/hknn/io/: reader.hpp  writer.hpp
include/hknn/math/: kernels.hpp  rng.hpp
include/hknn/util/: thread_pool.hpp
src/: api.cpp
src/cli/: main.cpp
src/embed/: hierarchy.cpp  optimizer.cpp  sampler.cpp  sharing.cpp
src/graph/: coarsen.cpp  knn_bruteforce.cpp  pij.cpp
test_results/run_20251122_174355/: test_config.json
test_results/run_20251122_174929/: metrics_K_100_2.json  metrics_K_150_3.json  metrics_K_30_0.json  metrics_K_50_1.json  results.json  test_config.json
test_results/run_20251122_174929/analysis/: summary_report.txt
tests/: test_embed.cpp  test_graph.cpp  test_integration.cpp  test_io.cpp
